<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/forget_pass"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/txt_change_password"
        android:layout_marginTop="40dp"
        android:hint="@string/old_password"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/edt_oldpassword"
        android:hint="@string/new_password"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/edt_new_password"
        android:hint="@string/confirm_pass"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_confirm_pass"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>
