<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_signi_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textSize="40dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_signinemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="text"
        android:singleLine="true"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/txt_create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginHorizontal="70dp"
        android:text="@string/create_an_account"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txt_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="38dp"
        android:text="@string/forget_password"
        android:textSize="20dp"
        android:textStyle="bold" />
</LinearLayout>